# music-data-tools

./: Cargo.toml  README.md
.github/workflows/: build-releases.yml
src/: args.rs  config.rs  logger.rs  main.rs
src/apple_music/: client.rs  mod.rs  request.rs  response.rs
src/my_spotify_data/: mod.rs
